2012-11-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* setup.sh: source statement for gcc breaks setups when running locally.
				This ought to be made an optional argument!
	* src/Utils.cxx: indenting identical to other .cxx files
	* src/Utils.cxx: GenerateFitAndPlot removed extra GEndl statements
	* scripts/HistFitter.py: print statements now through logger

2012-11-07 Alex Koutsman <alex.koutsman@cern.ch>
	* python/configManager.py : small addition of function setting for C++ cfgMgr
	* scripts/HistFitter.py : addition of GenerateFitAndPlotCPP function and --draw command with options
	* src/Utils.cxx : addition of GenerateFitAndPlot() function in C++, to decouple C++ side from python
	* src/FitConfig.cxx : small cleaning adjustments
	* src/ConfigMgr.cxx  : small cleaning adjustments
	* src/Utils.h  : addition of GenerateFitAndPlot() function in C++
	* src/FitConfig.h  : small cleaning adjustments
	* src/ConfigMgr.h  : small cleaning adjustments

2012-11-06 Alex Koutsman <alex.koutsman@cern.ch>
	* src/Utils.cxx: clean up of DecomposeWS
	* src/Utils.h: addition of some functions (incomplete functionality)
	* src/FitConfig.h: add function addSample(samplename, color)
	* set default ROOT version to 5.34.02 (small configuration bug in 5.34.03)
	
2012-11-01  Zach Marshall <zach.marshall@cern.ch>
	* src/Utils.cxx: Allow white samples
	* python/prepareHistos.py: Handle negative QCD bins safely
	* python/configManager.py: QCD normalization in the same region is the same, independent of plotting
	* python/sample.py: Protecting against strings being put in as numbers for systematics
	* python/channel.py, python/fitConfig.py: Moving to directory-based output structure
	* docs/todo: Updating
	* src/toy_utils.cxx: Protecting against additional fit failure modes, loosening cov. matrix quality cut
	* macros/Examples/p-values/compute_p0.C: Generic script from Aaron Armbruster for computing p-values