@@ -1,3 +1,6 @@
+2012-12-07 Evgeny Khramov <Evgeniy.Khramov@cern.ch>
+  * UpperLimitTable.py: set the workspace name for each individual channel
+
 2012-11-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* setup.sh: source statement for gcc breaks setups when running locally.
 				This ought to be made an optional argument!
